fixing projects cut off text mobile attempt 2

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -22,10 +22,10 @@
     }
     .projectContainer {
         h5 {
-            width: 100%;
+            width: 70%;
         }
         p {
-            width: 100%;
+            width: 70%;
             margin: 0;
             padding-top: 2px;
         }
