--- a/styles/style.css
+++ b/styles/style.css
@@ -724,10 +724,10 @@ footer .redBar2 {
   margin: 20px 0 5px 0;
 }
 .projects .projectContainer h5 {
-  width: 100%;
+  width: 70%;
 }
 .projects .projectContainer p {
-  width: 100%;
+  width: 70%;
   margin: 0;
   padding-top: 2px;
 }
